# supabase_notification_test

./: Cargo.toml
src/: main.rs
